PyMaker/datas/object2/RawHTML/i2801/Python_DOC_referPages.print-typex-syntaxerror-invalid-syntax.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/32122868/python-3-print-without-parenthesis">Python 3 print without parenthesis</a>
<span class="question-originals-answer-count">
                    7 answers
                </span>
</li>
</ul>
</div>
<p>So I started learning python 3 and I wanted to run a very simple code on ubuntu:</p>
<pre><code>print type("Hello World")
         ^
SyntaxError: invalid syntax
</code></pre>
<p>When I tried to compile that with command python3 hello.py in terminal it gave me the error above, but when used python hello.py (I think it means to use python 2 instead of 3) then it's all fine. Same when using python 3 and 2 shells in the terminal.</p>
<p>It seems like I'm missing something really stupid because I did some research and found no one with the same issue.</p>
</div>
<div class="post-text" itemprop="text">
<p>In Python3, <code>print</code> <a href="https://docs.python.org/3.0/whatsnew/3.0.html#print-is-a-function" rel="nofollow noreferrer">was changed</a> from a statement to a function (with brackets):</p>
<p>i.e.</p>
<pre><code>#Python2.x
print type("Hello World")
#Python3.x
print(type("Hello World")
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>In Python 3.x <a href="https://docs.python.org/3/library/functions.html#print" rel="nofollow noreferrer"><code>print()</code></a> is a function, while in 2.x it was a statement. The correct syntax in Python 3 would be:</p>
<pre><code>print(type("Hello World"))
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p><a href="https://sebastianraschka.com/Articles/2014_python_2_3_key_diff.html#the-print-function" rel="nofollow noreferrer">This is because from Python 3, <code>print</code> is a <strong>function</strong>, not a statement anymore.</a> Therefore, Python 3 only accepts:</p>
<pre class="lang-py prettyprint-override"><code>print(type("Hello World"))
</code></pre>
</div>
<span class="comment-copy">In 3.x <code>print</code> is not a statement.</span>
<span class="comment-copy">@planetp true :)</span>
<span class="comment-copy">I just knew it was something dumb. Thanks for helping!</span>
